--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,40 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 14px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
   line-height: 1.5;
-}
+   color: rgb(56, 56, 75);
+   padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f4ffff;
+    margin: 10px;
+    }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+  background-color: rgb(222, 241, 241);
+}
+
+
+h1 {
+    color:#2c3e50; 
+    font-size: 3rem;
+    border-bottom: 3px solid #3498db;
+    padding-bottom: 10px;
+}
+
+
+p {
+    max-width: 600px;
+    text-align: center;
+  
+}
+
+.profilepic{
+border-radius: 10px;
+margin: 10px;
+width: 250px;
+height: auto;
 }
